Bug 125462 - CALC EDIT The red ellipses of the “Mark invalid data” detective function stay visible even after a correct data is entered in the cell
Summary: CALC EDIT The red ellipses of the “Mark invalid data” detective function stay...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Cell-Validity
  Show dependency treegraph
 
Reported: 2019-05-23 14:00 UTC by NISZ LibreOffice Team
Modified: 2020-11-12 11:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A screenshot showcasing the issue. (85.57 KB, image/png)
2019-05-23 14:00 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-05-23 14:00:30 UTC
Created attachment 151628 [details]
A screenshot showcasing the issue.

The Mark invalid data function (Tools > Detective > Mark invalid data) can be used to mark invalid data in a validated cell with a red ellipse. These ellipses aren't removed when correct data is entered in the cell, making an impression that the entered value is incorrect.

Steps to reproduce:
    1. Create a new spreadsheet in LibreOffice Calc.
    2. Enter a numeric value in the A1 cell (e.g., 5)
    3. Select the A1 cell and click on Data > Validity
    4. Set a validity rule that the A1 cell clearly breaks, e.g.: “Allow: Whole Numbers”, “Data: equal”, “Value: 1” and click OK.
    5. Turn on the “Mark invalid data” function by clicking on Tools > Detective > Mark invalid data – the A1 cell should have a red ellipse around it.
    6. Change the value to a correct one in the A1 cell (e.g.: 1)

Actual results:
The A1 cell still has the red ellipse around it, even after a correct data has been entered.

Expected results:
The red ellipse should disappear immediately when a correct value is entered.

LibreOffice details:
Version: 6.3.0.0.alpha1+ (x64)
Build ID: c3245cfd54f391111afb424867ab483096d9de5e
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-05-19_22:59:06
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

Reproduced in:
LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 1 raal 2019-05-23 18:58:57 UTC
Confirm with Version: 6.3.0.0.alpha1+
Build ID: 38ac0586448d4f07811b139f62f62686b029feba
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: cs-CZ (cs_CZ.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Commit Notification 2020-10-08 14:28:48 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9971b1602d2a526dd8f2cc8255794515bb4e2168

tdf#125462 sc: remove red (invalid data) circle

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-11-12 11:24:03 UTC
Verified in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: a689cf1672e89cb78fbcfa14c505850927e71f58
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!