tdf#125462 sc: fix the Mark invalid data function

The Mark invalid data function can be used to mark
invalid data in a validated cell with a red ellipse.
These ellipses aren't removed when correct data is
entered in the cell, making an impression that the
entered value is incorrect.

Co-authored-by: Attila Szűcs (NISZ)
Change-Id: Ib7ca3c453a930669a7c58e89b91654de36b8bb3b